@@ -1,0 +1,17 @@
+#!/bin/bash2
+
+bashit="/bin/bash2 --rpm-requires"
+
+# Make sure that this bash has the rpm-requires hack
+$bashit < /dev/null 2>&1 > /dev/null || exit $?
+
+prereqs="`cat | $bashit | sort | uniq | sed -e 's/^bash(//' -e 's/)$//'`"
+[ -z "$prereqs" ] && exit 0
+
+for prereq in $prereqs
+do
+    case $prereq in
+    /*)	echo $prereq ;;
+    *)	echo "`which $prereq`" ;;
+    esac
+done | sort | uniq
